k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bsc-backend
  labels:
    app: bsc-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: bsc-backend
